# agent-memory-auditor-public

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
scripts/: generate_mock_data.py  list_gemini_models.py  stress_test_data.py
src/: generate_mock_data.py  main_workflow.py
src/adapters/: base.py  chroma_adapter.py  factory.py  json_adapter.py  langgraph_adapter.py  mem0_adapter.py  postgres_adapter.py  pydantic_ai_adapter.py  sqlite_adapter.py
src/engine/: clustering.py  contradiction.py  execution.py  llm_provider.py
src/helpers/: config.py  pydantic_models.py
src/reporter/: markdown_reporter.py
tests/: test_adapters.py  test_pruning.py  test_pydantic_ai.py
