[project]
name = "agent-memory-auditor"
version = "0.1.0"
description = "Framework-agnostic state governance, compression, and contradiction auditing tool for agentic memory states."
readme = "README.md"
authors = [
    { name = "Rebecca Ferguson" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "dbos>=0.1.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "google-genai>=0.1.0",
    "openai>=1.12.0",
    "anthropic>=0.30.0",
    "psycopg[binary]>=3.1.18",
    "pgvector>=0.2.4",
    "mem0ai>=0.1.0",
    "langgraph>=0.0.30",
    "chromadb>=0.4.24",
    "pytest>=9.1.1",
    "logfire>=0.5.0",
    "pydantic-ai>=0.0.18",
]

[project.scripts]
ama = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
